# heureka-task-sj

./: .gitignore  Dockerfile  Makefile  README.md  compose-test.yaml  compose.yaml  pyproject.toml
extraction_worker/: Dockerfile  extraction_worker.py
extraction_worker/common/: constants.py  log.py  postgres_dao.py
tests/: __init__.py  mock_offers.json  test_data.py  test_extractionworker.py
